Branch switching Enter hotkey + flicker fix

--- a/src/features/github/components/popovers/PopoverBranch.css
+++ b/src/features/github/components/popovers/PopoverBranch.css
@@ -12,27 +12,40 @@
     border-radius: 12px;
 }
 
+/* top of the modal */
 .github-popover-branch-topline {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
+/* branches searched list */
 .popover-branch-branches-list {
     display: flex;
     flex-direction: column;
     gap: 0.3rem;
 }
 
-.popover-branch-branches-create-button {
-    display: flex;
-    justify-content: flex-start;
-    gap: 0.2rem;
-    background-color: transparent;
-}
-
+/* existing branch button */
 .popover-branch-branches-list-button {
     display: flex;
     justify-content: space-between;
     background-color: transparent;
 }
+
+/* create a new branch button */
+.popover-branch-branches-create-button {
+    display: flex;
+    justify-content: flex-start;
+    position: relative;
+    gap: 0.2rem;
+    background-color: transparent;
+}
+
+.popover-branch-branches-create-button-hotkey {
+    position: absolute;
+    right: 0.5rem;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
